# mydesk

./: Pipfile  README.rst  main.py  mydesk.ini  pyinstaller.sh  setup.cfg
.github/workflows/: python-publish.yml
mydesk/: __main__.py  gui.py
