[metadata]
 name = mydesk
 version = 1.0.0

[options]
 zip_safe = False
 packages = find:
 platforms = any
 include_package_data = True
 install_requires =
     selenium
     gooey
     retry
 python_requires = >=3.8
 setup_requires =
     setuptools_scm

[options.entry_points]
 console_scripts =
    mydesk = mydesk.__main__:main
